--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "dependencies": {
     "pinia": "^2.0.14",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "socket.io-client": "^4.5.1",
+    "vue3-slide-up-down": "^1.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.1.3",
     "vite": "^2.9.9"
   }
 }
